--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: AKIAZ6HX3V343QPIZR7U
+        aws-secret-access-key: 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
         aws-region: ap-south-1
 
     - name: Login to Amazon ECR
