--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,8 +28,9 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: 683419610873.dkr.ecr.ap-south-1.amazonaws.com/wishbuk
+        ECR_REPOSITORY: 683419610873.dkr.ecr.ap-south-1.amazonaws.com
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker build -t wishbuk .
+        docker tag wishbuk:latest 683419610873.dkr.ecr.ap-south-1.amazonaws.com/wishbuk:latest
+        docker push 683419610873.dkr.ecr.ap-south-1.amazonaws.com/wishbuk:latest
