--- a/appspec.yml
+++ b/appspec.yml
@@ -1,17 +1,21 @@
 version: 0.0
 os: linux
-files:
-  - source: /index.html
-    destination: /var/www/html/
 hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies
-      timeout: 300
-      runas: root
-    - location: scripts/start_server
-      timeout: 300
-      runas: root
-  ApplicationStop:
-    - location: scripts/stop_server
-      timeout: 300
-      runas: root
+    BeforeBlockTraffic:
+        - location: scripts/before_block_traffic.sh
+    AfterBlockTraffic:
+        - location: scripts/after_block_traffic.sh
+    ApplicationStop:
+        - location: scripts/application_stop.sh
+    BeforeInstall:
+        - location: scripts/before_install.sh
+    AfterInstall:
+        - location: scripts/after_install.sh
+    ApplicationStart:
+        - location: scripts/application_start.sh
+    ValidateService:
+        - location: scripts/validate_service.sh
+    BeforeAllowTraffic:
+        - location: scripts/before_allow_traffic.sh
+    AfterAllowTraffic:
+        - location: scripts/after_allow_traffic.sh
